RESOLVED FIXED210409
Fix a few mispellings of descendant and propagation
https://bugs.webkit.org/show_bug.cgi?id=210409
Summary Fix a few mispellings of descendant and propagation
Darin Adler
Reported 2020-04-12 11:05:47 PDT
Fix a few mispellings of descendant and propagation
Attachments
Patch (10.50 KB, patch)
2020-04-12 11:08 PDT, Darin Adler
no flags
Patch (10.49 KB, patch)
2020-04-12 12:29 PDT, Darin Adler
mark.lam: review+
Darin Adler
Comment 1 2020-04-12 11:08:20 PDT
Darin Adler
Comment 2 2020-04-12 12:29:38 PDT
Mark Lam
Comment 3 2020-04-12 12:48:52 PDT
Comment on attachment 396237 [details] Patch r=me
Darin Adler
Comment 4 2020-04-12 12:51:47 PDT
Radar WebKit Bug Importer
Comment 5 2020-04-12 12:52:16 PDT
Note You need to log in before you can comment on or make changes to this bug.