Fix a few mispellings of descendant and propagation https://bugs.webkit.org/show_bug.cgi?id=210409

Reviewed by Mark Lam.

Source/JavaScriptCore:

* ftl/FTLAbstractHeap.h: "descendants"
* offlineasm/ast.rb: "descendants"

Source/WebCore:

* dom/Element.cpp:
(WebCore::Element::dispatchWheelEvent): "propagation"
* dom/TreeScopeOrderedMap.cpp:
(WebCore::TreeScopeOrderedMap::getAllElementsById const):
"descendants". Also refactored this function a bit.
* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::canShowControlsManager const):
"descendants"
* rendering/RenderFrameSet.cpp:
(WebCore::resetFrameRendererAndDescendants): "descendants"
(WebCore::RenderFrameSet::positionFrames): "descendants"
(WebCore::RenderFrameSet::positionFramesWithFlattening): "descendants"

Source/WebInspectorUI:

* UserInterface/Views/TreeOutline.js:
(WI.TreeOutline.prototype._rememberTreeElement):
(WI.TreeOutline.prototype._forgetTreeElement):
(WI.TreeOutline.prototype.selectionControllerNumberOfItems):

Canonical link: https://commits.webkit.org/223303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259990 268f45cc-cd09-0410-ab3c-d52691b4dbfc